--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -84,16 +84,15 @@ jobs:
                target: 'x86_64-unknown-linux-musl'
                build: |
                  set -e
-                 cd bindings/nodejs 
                  rustup target add x86_64-unknown-linux-musl
                  yarn lerna exec "yarn build --target x86_64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
 
-             - host: ubuntu-latest
-               target: 'aarch64-unknown-linux-musl'
-               build: >-
-                 set -e
-                 rustup target add aarch64-unknown-linux-musl
-                 yarn lerna exec "yarn build --target aarch64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
+            #  - host: ubuntu-latest
+            #    target: 'aarch64-unknown-linux-musl'
+            #    build: >-
+            #      set -e
+            #      rustup target add aarch64-unknown-linux-musl
+            #      yarn lerna exec "yarn build --target aarch64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
 
     name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
