--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -360,6 +360,15 @@ jobs:
         run: ls ./
         shell: bash
 
+      - name: Zip folder
+        run: zip -r folder.zip ./
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: package.zip
+          path: folder.zip
+
       - name: Lerna publish
         if: "startsWith(github.event.head_commit.message, 'chore(release): publish nodejs')"
         run: yarn lerna publish from-package --no-verify-access --yes
