--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -33,61 +33,61 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          # - host: windows-latest
-          #   target: 'x86_64-pc-windows-msvc'
-          #   build: |
-          #     yarn lerna exec "yarn build --target x86_64-pc-windows-msvc" --concurrency 1 --stream --no-prefix
+          - host: windows-latest
+            target: 'x86_64-pc-windows-msvc'
+            build: |
+              yarn lerna exec "yarn build --target x86_64-pc-windows-msvc" --concurrency 1 --stream --no-prefix
 
-          # - host: macos-13
-          #   target: 'x86_64-apple-darwin'
-          #   build: |
-          #     rustup target add x86_64-apple-darwin
-          #     yarn lerna exec "yarn build --target x86_64-apple-darwin" --concurrency 1 --stream --no-prefix
-          #     strip -x ./*.node
+          - host: macos-13
+            target: 'x86_64-apple-darwin'
+            build: |
+              rustup target add x86_64-apple-darwin
+              yarn lerna exec "yarn build --target x86_64-apple-darwin" --concurrency 1 --stream --no-prefix
+              strip -x ./*.node
 
-          # - host: macos-14
-          #   target: 'aarch64-apple-darwin'
-          #   build: |
-          #     sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*;
-          #     export CC=$(xcrun -f clang);
-          #     export CXX=$(xcrun -f clang++);
-          #     SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
-          #     export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
-          #     yarn lerna exec "yarn build --target aarch64-apple-darwin" --concurrency 1 --stream --no-prefix
-          #     strip -x ./*.node
+          - host: macos-14
+            target: 'aarch64-apple-darwin'
+            build: |
+              sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*;
+              export CC=$(xcrun -f clang);
+              export CXX=$(xcrun -f clang++);
+              SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
+              export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
+              yarn lerna exec "yarn build --target aarch64-apple-darwin" --concurrency 1 --stream --no-prefix
+              strip -x ./*.node
 
-          # - host: ubuntu-latest
-          #   target: 'x86_64-unknown-linux-gnu'
-          #   docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
-          #   build: |
-          #     set -e
-          #     sudo apt-get update
-          #     sudo apt-get install -y patch
-          #     cd bindings/nodejs
-          #     rustup target add x86_64-unknown-linux-gnu
-          #     yarn lerna exec "yarn build --target x86_64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
-          #     strip ./*.node
+          - host: ubuntu-latest
+            target: 'x86_64-unknown-linux-gnu'
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
+            build: |
+              set -e
+              sudo apt-get update
+              sudo apt-get install -y patch
+              cd bindings/nodejs
+              rustup target add x86_64-unknown-linux-gnu
+              yarn lerna exec "yarn build --target x86_64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
+              strip ./*.node
 
-          # - host: ubuntu-latest
-          #   target: 'aarch64-unknown-linux-gnu'
-          #   docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
-          #   build: |
-          #     set -e
-          #     sudo apt-get update
-          #     sudo apt-get install -y patch
-          #     cd bindings/nodejs
-          #     rustup target add aarch64-unknown-linux-gnu
-          #     yarn lerna exec "yarn build --target aarch64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
-          #     llvm-strip ./*.node
+          - host: ubuntu-latest
+            target: 'aarch64-unknown-linux-gnu'
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
+            build: |
+              set -e
+              sudo apt-get update
+              sudo apt-get install -y patch
+              cd bindings/nodejs
+              rustup target add aarch64-unknown-linux-gnu
+              yarn lerna exec "yarn build --target aarch64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
+              llvm-strip ./*.node
 
-             - host: ubuntu-latest
-               target: 'x86_64-unknown-linux-musl'
-               build: |
-                 set -e
-                 sudo apt-get update
-                 sudo apt-get install musl-tools
-                 rustup target add x86_64-unknown-linux-musl
-                 yarn lerna exec "yarn build --target x86_64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
+          - host: ubuntu-latest
+            target: 'x86_64-unknown-linux-musl'
+            build: |
+              set -e
+              sudo apt-get update
+              sudo apt-get install musl-tools
+              rustup target add x86_64-unknown-linux-musl
+              yarn lerna exec "yarn build --target x86_64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
 
             #  - host: ubuntu-latest
             #    target: 'aarch64-unknown-linux-musl'
@@ -367,7 +367,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: package.zip
-          path: folder.zip
+          path: bindings/nodejs/folder.zip
 
       - name: Lerna publish
         if: "startsWith(github.event.head_commit.message, 'chore(release): publish nodejs')"
