--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -94,6 +94,7 @@ jobs:
               cd bindings/nodejs
               rustup target add x86_64-unknown-linux-musl
               yarn lerna exec "yarn build --target x86_64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
+              strip ./*.node
 
             #  - host: ubuntu-latest
             #    target: 'aarch64-unknown-linux-musl'
@@ -216,57 +217,57 @@ jobs:
   #         yarn install
   #         yarn link
   #         yarn test
-  # test-linux-x64-gnu-binding:
-  #   name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
-  #   needs:
-  #     - build
-  #   defaults:
-  #     run:
-  #       working-directory: ${{ env.WORKING_DIRECTORY }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       node: [ '16', '18', '20' ]
-  #   runs-on: ubuntu-latest
+  test-linux-x64-musl-binding:
+    name: Test bindings on Linux-x64-musl - node@${{ matrix.node }}
+    needs:
+      - build
+    defaults:
+      run:
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+    strategy:
+      fail-fast: false
+      matrix:
+        node: [ '16', '18', '20' ]
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #         check-latest: true
-  #         cache: yarn
-  #         cache-dependency-path: 'bindings/nodejs/yarn.lock'
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          check-latest: true
+          cache: yarn
+          cache-dependency-path: 'bindings/nodejs/yarn.lock'
 
-  #     - name: Install dependencies
-  #       run: yarn install --immutable --mode=skip-build
+      - name: Install dependencies
+        run: yarn install --immutable --mode=skip-build
 
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bindings-x86_64-unknown-linux-gnu
-  #         path: artifacts
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-x86_64-unknown-linux-musl
+          path: artifacts
 
-  #     - name: Move artifacts
-  #       run: yarn artifacts
-  #       shell: bash
+      - name: Move artifacts
+        run: yarn artifacts
+        shell: bash
 
-  #     - name: List folder
-  #       run: ls ./
-  #       shell: bash
+      - name: List folder
+        run: ls ./
+        shell: bash
 
-  #     - name: Test bindings
-  #       uses: addnab/docker-run-action@v3
-  #       with:
-  #         image: node:${{ matrix.node }}-slim
-  #         options: -v ${{ github.workspace }}:/workspace
-  #         run: |
-  #           cd workspace/bindings/nodejs
-  #           yarn install
-  #           yarn link
-  #           yarn test
+      - name: Test bindings
+        uses: addnab/docker-run-action@v3
+        with:
+          image: node:${{ matrix.node }}-alpine
+          options: -v ${{ github.workspace }}:/workspace
+          run: |
+            cd workspace/bindings/nodejs
+            yarn install
+            yarn link
+            yarn test
 
   #  test-linux-aarch64-gnu-binding:
   #    name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
