--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -96,6 +96,8 @@ jobs:
             build: |
               set -e
               cd bindings/nodejs
+              sudo apt-get update && sudo apt-get install -y musl-tools gcc-aarch64-linux-musl
+              export CC_aarch64_unknown_linux_musl=aarch64-linux-musl-gcc
               rustup target add aarch64-unknown-linux-musl
               yarn lerna exec "yarn build --target aarch64-unknown-linux-musl" --concurrency 1 --stream --no-prefix
               strip ./*.node
