--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -93,7 +93,7 @@ jobs:
           - host: ubuntu-latest
             target: 'aarch64-unknown-linux-musl'
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
-            build: >-
+            build: |
               set -e
               rustup target add aarch64-unknown-linux-musl
               yarn build --target aarch64-unknown-linux-musl
