--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -295,7 +295,10 @@ jobs:
           cache-dependency-path: 'bindings/nodejs/yarn.lock'
 
       - name: Install dependencies
-        run: yarn install --immutable --mode=skip-build
+        run: |
+          yarn config set supportedArchitectures.cpu "arm64"
+          yarn config set supportedArchitectures.libc "musl"
+          yarn install --immutable --mode=skip-build
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
