--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -33,28 +33,28 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          # - host: windows-latest
-          #   target: 'x86_64-pc-windows-msvc'
-          #   build: |
-          #     yarn lerna exec "yarn build --target x86_64-pc-windows-msvc" --concurrency 1 --stream --no-prefix
+          - host: windows-latest
+            target: 'x86_64-pc-windows-msvc'
+            build: |
+              yarn lerna exec "yarn build --target x86_64-pc-windows-msvc" --concurrency 1 --stream --no-prefix
 
-          # - host: macos-13
-          #   target: 'x86_64-apple-darwin'
-          #   build: |
-          #     rustup target add x86_64-apple-darwin
-          #     yarn lerna exec "yarn build --target x86_64-apple-darwin" --concurrency 1 --stream --no-prefix
-          #     strip -x ./*.node
+          - host: macos-13
+            target: 'x86_64-apple-darwin'
+            build: |
+              rustup target add x86_64-apple-darwin
+              yarn lerna exec "yarn build --target x86_64-apple-darwin" --concurrency 1 --stream --no-prefix
+              strip -x ./*.node
 
-          # - host: macos-14
-          #   target: 'aarch64-apple-darwin'
-          #   build: |
-          #     sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*;
-          #     export CC=$(xcrun -f clang);
-          #     export CXX=$(xcrun -f clang++);
-          #     SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
-          #     export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
-          #     yarn lerna exec "yarn build --target aarch64-apple-darwin" --concurrency 1 --stream --no-prefix
-          #     strip -x ./*.node
+          - host: macos-14
+            target: 'aarch64-apple-darwin'
+            build: |
+              sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*;
+              export CC=$(xcrun -f clang);
+              export CXX=$(xcrun -f clang++);
+              SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
+              export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
+              yarn lerna exec "yarn build --target aarch64-apple-darwin" --concurrency 1 --stream --no-prefix
+              strip -x ./*.node
 
           - host: ubuntu-latest
             target: 'x86_64-unknown-linux-gnu'
@@ -68,17 +68,17 @@ jobs:
               yarn lerna exec "yarn build --target x86_64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
               strip ./*.node
 
-          # - host: ubuntu-latest
-          #   target: 'aarch64-unknown-linux-gnu'
-          #   docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
-          #   build: |
-          #     set -e
-          #     sudo apt-get update
-          #     sudo apt-get install -y patch
-          #     cd bindings/nodejs
-          #     rustup target add aarch64-unknown-linux-gnu
-          #     yarn lerna exec "yarn build --target aarch64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
-          #     llvm-strip ./*.node
+          - host: ubuntu-latest
+            target: 'aarch64-unknown-linux-gnu'
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
+            build: |
+              set -e
+              sudo apt-get update
+              sudo apt-get install -y patch
+              cd bindings/nodejs
+              rustup target add aarch64-unknown-linux-gnu
+              yarn lerna exec "yarn build --target aarch64-unknown-linux-gnu" --concurrency 1 --stream --no-prefix
+              llvm-strip ./*.node
 
           - host: ubuntu-latest
             target: 'x86_64-unknown-linux-musl'
@@ -167,57 +167,58 @@ jobs:
           path: bindings/nodejs/*.node
           if-no-files-found: error
 
-  # test-macOS-windows-binding:
-  #   name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
-  #   needs:
-  #     - build
-  #   defaults:
-  #     run:
-  #       working-directory: ${{ env.WORKING_DIRECTORY }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       settings:
-  #         - host: macos-13
-  #           target: 'x86_64-apple-darwin'
-  #         - host: macos-14
-  #           target: 'aarch64-apple-darwin'
-  #         - host: windows-latest
-  #           target: 'x86_64-pc-windows-msvc'
-  #       node: [ '16', '18', '20' ]
-  #   runs-on: ${{ matrix.settings.host }}
+  test-macOS-windows-binding:
+    name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
+    needs:
+      - build
+    defaults:
+      run:
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+    strategy:
+      fail-fast: false
+      matrix:
+        settings:
+          - host: macos-13
+            target: 'x86_64-apple-darwin'
+          - host: macos-14
+            target: 'aarch64-apple-darwin'
+          - host: windows-latest
+            target: 'x86_64-pc-windows-msvc'
+        node: [ '16', '18', '20' ]
+    runs-on: ${{ matrix.settings.host }}
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         submodules: true
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
 
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #         check-latest: true
-  #         cache: yarn
-  #         cache-dependency-path: 'bindings/nodejs/yarn.lock'
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          check-latest: true
+          cache: yarn
+          cache-dependency-path: 'bindings/nodejs/yarn.lock'
 
-  #     - name: Install dependencies
-  #       run: yarn install --immutable --mode=skip-build
+      - name: Install dependencies
+        run: yarn install --immutable --mode=skip-build
 
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bindings-${{ matrix.settings.target }}
-  #         path: artifacts
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings-${{ matrix.settings.target }}
+          path: artifacts
 
-  #     - name: Move artifacts
-  #       run: yarn artifacts
-  #       shell: bash
+      - name: Move artifacts
+        run: yarn artifacts
+        shell: bash
 
-  #     - name: Test bindings
-  #       run: |
-  #         yarn install
-  #         yarn link
-  #         yarn test
+      - name: Test bindings
+        run: |
+          yarn install
+          yarn link
+          yarn test
+
   test-linux-x64-musl-binding:
     name: Test bindings on Linux-x64-musl - node@${{ matrix.node }}
     needs:
@@ -330,57 +331,56 @@ jobs:
             yarn link
             yarn test
 
-  #  test-linux-aarch64-gnu-binding:
-  #    name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
-  #    needs:
-  #      - build
-  #    defaults:
-  #      run:
-  #        working-directory: ${{ env.WORKING_DIRECTORY }}
-  #    strategy:
-  #      fail-fast: false
-  #      matrix:
-  #        node: ['14', '16', '18']
-  #    runs-on: ubuntu-latest
-  #
-  #    steps:
-  #      - uses: actions/checkout@v3
-  #      - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-  #      - name: List directory
-  #        run: |
-  #          ls -la &&
-  #          pwd
-  #
-  #      - name: Download artifacts
-  #        uses: actions/download-artifact@v3
-  #        with:
-  #          name: bindings-aarch64-unknown-linux-gnu
-  #          path: artifacts
-  #
-  #      - name: Install dependencies
-  #        run: |
-  #          yarn config set supportedArchitectures.cpu "arm64"
-  #          yarn config set supportedArchitectures.libc "glibc"
-  #          yarn install --immutable --mode=skip-build
-  #      - name: Move artifacts
-  #        run: yarn artifacts
-  #        shell: bash
-  #
-  #      - name: List folder
-  #        run: ls ./
-  #        shell: bash
-  #
-  #      - name: Setup and run tests
-  #        uses: addnab/docker-run-action@v3
-  #        with:
-  #          image: ghcr.io/napi-rs/napi-rs/nodejs:aarch64-${{ matrix.node }}
-  #          options: -v ${{ github.workspace }}:/workspace -w /workspace
-  #          run: |
-  #            ls -la
-  #            cd bindings/nodejs
-  #            yarn install
-  #            yarn link
-  #            yarn test
+  test-linux-aarch64-gnu-binding:
+      name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
+      needs:
+        - build
+      defaults:
+        run:
+          working-directory: ${{ env.WORKING_DIRECTORY }}
+      strategy:
+        fail-fast: false
+        matrix:
+          node: ['14', '16', '18']
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        - name: List directory
+          run: |
+            ls -la &&
+            pwd
+    
+        - name: Download artifacts
+          uses: actions/download-artifact@v3
+          with:
+            name: bindings-aarch64-unknown-linux-gnu
+            path: artifacts
+  
+        - name: Install dependencies
+          run: |
+            yarn config set supportedArchitectures.cpu "arm64"
+            yarn config set supportedArchitectures.libc "glibc"
+            yarn install --immutable --mode=skip-build
+        - name: Move artifacts
+          run: yarn artifacts
+          shell: bash
+  
+        - name: List folder
+          run: ls ./
+          shell: bash
+
+        - name: Setup and run tests
+          uses: addnab/docker-run-action@v3
+          with:
+            image: ghcr.io/napi-rs/napi-rs/nodejs:aarch64-${{ matrix.node }}
+            options: -v ${{ github.workspace }}:/workspace -w /workspace
+            run: |
+              ls -la
+              cd bindings/nodejs
+              yarn install
+              yarn link
+              yarn test
 
   release:
     name: Release
@@ -390,12 +390,13 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
     needs:
       - build
-      # - test-linux-x64-gnu-binding
-      #      - test-linux-x64-centos-7
-      #      - test-linux-x64-musl-binding
-      #      - test-linux-aarch64-gnu-binding
-      #      - test-linux-arm-gnueabihf-binding
-      # - test-macOS-windows-binding
+      - test-linux-x64-gnu-binding
+      - test-linux-x64-centos-7
+      - test-linux-x64-musl-binding
+      - test-linux-aarch64-musl-binding
+      - test-linux-aarch64-gnu-binding
+      # - test-linux-arm-gnueabihf-binding
+      - test-macOS-windows-binding
     steps:
       - uses: actions/checkout@v3
 
