--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -389,14 +389,13 @@ jobs:
       run:
         working-directory: ${{ env.WORKING_DIRECTORY }}
     needs:
-      - build
       - test-linux-x64-gnu-binding
-      - test-linux-x64-centos-7
+      #      - test-linux-x64-centos-7
       - test-linux-x64-musl-binding
-      - test-linux-aarch64-musl-binding
-      - test-linux-aarch64-gnu-binding
-      # - test-linux-arm-gnueabihf-binding
+      #      - test-linux-aarch64-gnu-binding
+      #      - test-linux-arm-gnueabihf-binding
       - test-macOS-windows-binding
+      - test-linux-aarch64-musl-binding
     steps:
       - uses: actions/checkout@v3
 
